ingress/prometheus.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-prometheus.info
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
